--- a/content/data/config.json
+++ b/content/data/config.json
@@ -63,7 +63,7 @@
                 }
             },
             "type": "ImageBlock",
-            "url": "/images/logo.svg"
+            "url": "/images/3d.gif"
         }
     },
     "footer": {
