--- a/content/data/config.json
+++ b/content/data/config.json
@@ -54,7 +54,7 @@
             }
         },
         "logo": {
-            "altText": "altText of the image",
+            "altText": "Blockchain Metaverse",
             "caption": "Caption of the image",
             "elementId": "",
             "styles": {
