config.json: updated caption in logo

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -55,7 +55,7 @@
         },
         "logo": {
             "altText": "Blockchain Metaverse",
-            "caption": "Caption of the image",
+            "caption": "Metaverso futurismo ",
             "elementId": "",
             "styles": {
                 "self": {
