--- a/content/data/config.json
+++ b/content/data/config.json
@@ -11,7 +11,7 @@
             {
                 "type": "Link",
                 "label": "Home",
-                "url": "/",
+                "url": "https://coflow.com.br/",
                 "altText": ""
             },
             {
