config.json: updated label in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -16,7 +16,7 @@
             },
             {
                 "type": "Link",
-                "label": "Blog",
+                "label": "Tudo Sobre o Assunto",
                 "altText": "Blog",
                 "url": "/blog"
             }
