--- a/content/data/config.json
+++ b/content/data/config.json
@@ -25,7 +25,7 @@
             {
                 "type": "Button",
                 "label": "PARCEIROS",
-                "url": "/",
+                "url": "https://coflow.com.br/parceiros",
                 "altText": "Sign up",
                 "style": "primary"
             }
