config.json: updated copyrightText in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -78,7 +78,7 @@
             "address": "312 Lovely Street, NY",
             "addressAltText": "Our address"
         },
-        "copyrightText": "Powered by [Stackbit](https://www.stackbit.com/)",
+        "copyrightText": "Feito com ❤️ por [Coflow](https://coflow.com.br/)\n",
         "primaryLinks": [
             {
                 "type": "Link",
