--- a/content/data/config.json
+++ b/content/data/config.json
@@ -66,7 +66,7 @@
                 }
             },
             "type": "ImageBlock",
-            "url": "/images/logo.svg"
+            "url": "/images/3d.gif"
         },
         "title": "Starter",
         "contacts": {
