config.json: updated title in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -68,7 +68,7 @@
             "type": "ImageBlock",
             "url": "/images/3d.gif"
         },
-        "title": "Starter",
+        "title": "Coflow",
         "contacts": {
             "title": "Contact details",
             "phoneNumber": "850-123-5021",
