config.json: updated altText in logo

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -57,7 +57,7 @@
     "footer": {
         "colors": "colors-h",
         "logo": {
-            "altText": "Blockchain ",
+            "altText": "Blockchain games",
             "caption": "Caption of the image",
             "elementId": "",
             "styles": {
