config.json: updated caption in logo

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -58,7 +58,7 @@
         "colors": "colors-h",
         "logo": {
             "altText": "Blockchain contratos",
-            "caption": "Caption of the image",
+            "caption": "Smart Contracts",
             "elementId": "",
             "styles": {
                 "self": {
