config.json: updated url in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -89,7 +89,7 @@
             {
                 "type": "Link",
                 "label": "FAQ",
-                "url": "/faq",
+                "url": "https://coflow.com.br/faq",
                 "altText": ""
             },
             {
