config.json: updated url in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -95,7 +95,7 @@
             {
                 "type": "Link",
                 "label": "Blog",
-                "url": "/blog",
+                "url": "https://coflow.com.br/faqblog",
                 "altText": ""
             }
         ],
