config.json: updated label in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -94,7 +94,7 @@
             },
             {
                 "type": "Link",
-                "label": "Blog",
+                "label": "Blog Principal",
                 "url": "https://coflow.com.br/blog",
                 "altText": ""
             }
