config.json: updated altText in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -96,7 +96,7 @@
                 "type": "Link",
                 "label": "Blog Principal",
                 "url": "https://coflow.com.br/blog",
-                "altText": ""
+                "altText": "Blog Principal"
             }
         ],
         "socialLinks": [
