config.json: Multiple updates: * updated socialLinks in footer * updated type in socialLinks * updated __metadata in socialLinks * updated style in socialLinks * updated elementId in socialLinks * updated altText in socialLinks * updated label in socialLinks * updated icon in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -101,6 +101,14 @@
         ],
         "socialLinks": [
             {
+                "label": "Facebook",
+                "altText": "",
+                "url": "/",
+                "icon": "facebook",
+                "style": "link",
+                "elementId": ""
+            },
+            {
                 "type": "Social",
                 "altText": "Twitter",
                 "label": "Twitter",
