config.json: updated phoneAltText in contacts

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -72,7 +72,7 @@
         "contacts": {
             "title": "Contact details",
             "phoneNumber": "21 2491-5249",
-            "phoneAltText": "Our phone",
+            "phoneAltText": "Nosso telefone",
             "email": "info@lorem.mail",
             "emailAltText": "Our email",
             "address": "312 Lovely Street, NY",
