config.json: updated email in contacts

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -73,7 +73,7 @@
             "title": "Contact details",
             "phoneNumber": "21 2491-5249",
             "phoneAltText": "Nosso telefone",
-            "email": "info@lorem.mail",
+            "email": "contato@coflow.com.br",
             "emailAltText": "Our email",
             "address": "312 Lovely Street, NY",
             "addressAltText": "Our address"
