config.json: updated emailAltText in contacts

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -74,7 +74,7 @@
             "phoneNumber": "21 2491-5249",
             "phoneAltText": "Nosso telefone",
             "email": "contato@coflow.com.br",
-            "emailAltText": "Our email",
+            "emailAltText": "Nosso E-mail",
             "address": "312 Lovely Street, NY",
             "addressAltText": "Our address"
         },
