config.json: updated address in contacts

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -75,7 +75,7 @@
             "phoneAltText": "Nosso telefone",
             "email": "contato@coflow.com.br",
             "emailAltText": "Nosso E-mail",
-            "address": "312 Lovely Street, NY",
+            "address": "Brasil | Rio de Janeiro",
             "addressAltText": "Our address"
         },
         "copyrightText": "Feito com ❤️ por [Coflow](https://coflow.com.br/)\n",
