config.json: updated addressAltText in contacts

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -76,7 +76,7 @@
             "email": "contato@coflow.com.br",
             "emailAltText": "Nosso E-mail",
             "address": "Brasil | Rio de Janeiro",
-            "addressAltText": "Our address"
+            "addressAltText": "Nosso Endereço"
         },
         "copyrightText": "Feito com ❤️ por [Coflow](https://coflow.com.br/)\n",
         "primaryLinks": [
